# learnCPP

basic-cpp/: 01-variable.cpp  02-scope.cpp  03-include_extern.cpp  04-reference.cpp  05-pointer.cpp  06-const.cpp  07-auto-decltype.cpp  08-student-info-system.cpp  09-email-confirm-tool.cpp  09-simple-text-analyzer.cpp  09-string.cpp  10-inventory-manage-system.cpp  10-vector.cpp  11-iterator.cpp  12-array.cpp  13-multiarray.cpp  14-operator.cpp  15-try-throw-catch.cpp  16-function.cpp  17-basic-class.cpp  18-advanced-class.cpp  19-memory.cpp  20-smart-pointer.cpp  21-lambda.cpp  22-delist.cpp  23-dequeue.cpp  24-thread-safe-shared-pointer.cpp  25-map.cpp  26-unorderedmap.cpp  27-operator-overloading.cpp  28-template.cpp  29-template-exercise.cpp  30-forwarding-reference-perfect-forwarding.cpp  31-single-instance.cpp  32-stream.cpp  CPP.md
basic-cpp/33-library/: library.cpp
basic-cpp/33-library/MathLib/: CMakeLists.txt
basic-cpp/33-library/MathLib/include/: mymath.h
basic-cpp/33-library/MathLib/src/: mymath.cpp
basic-cpp/33-library/MyApp/: CMakeLists.txt  main.cpp
basic-cpp/proj-TaskManageSystem/: README.md
basic-cpp/proj-TaskManageSystem/src/: AuthService.cpp  AuthService.h  Command.cpp  Command.h  Logger.cpp  Logger.h  Task.h  TaskManager.cpp  TaskManager.h  User.h  main.cpp
basic-cpp/proj-logger/: Readme.md  logger.hpp  main.cpp
